# hello-rust

./: .env.sample  .gitignore  CLAUDE.md  Cargo.toml  README.md  mise.toml
.mise/tasks/: start
.mise/tasks/db/: migrate  rollback
.mise/tasks/dev/: _default  check
.mise/tasks/sea/: _default
.mise/tasks/test/: _default  watch
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: errors.rs  handlers.rs  main.rs  models.rs  repository.rs
src/db/: repository.rs
src/db/entities/: friend.rs  mod.rs
src/entities/: friend.rs  mod.rs
